--- a/src/widgets/navbar/navbar.css
+++ b/src/widgets/navbar/navbar.css
@@ -62,3 +62,8 @@ img {
     text-decoration: none;
 }
 
+@media all and (max-width: 800px) {
+    .inner-container {
+        width: 300px;
+    }
+}
