--- a/src/widgets/headBlock/headBlock.css
+++ b/src/widgets/headBlock/headBlock.css
@@ -8,3 +8,10 @@
     justify-content: center;
     align-items: center;
 }
+
+@media all and (max-width: 800px) {
+    .head-container {
+        background-size: contain;
+        width: 100vw;
+    }
+}
