--- a/src/widgets/headToyCategory/headToyCategory.css
+++ b/src/widgets/headToyCategory/headToyCategory.css
@@ -1,4 +1,8 @@
 .head-toy-container {
+    width: 100%; 
+    max-width: 1200px; 
+    margin: 0 auto;
+    box-sizing: border-box;
     height: 460px;
     display: flex;
     justify-content: center;
@@ -6,7 +10,8 @@
 }
 
 .inner-head-toy {
-    width: 1200px;
+    width: 100%; 
+    max-width: 1200px;
     height: 220px;
     display: flex;
     justify-content: center;
@@ -14,7 +19,8 @@
 }
 
 .toy-block {
-    width: 570px;
+    width: 100%; 
+    max-width: 570px;
     height: 188px;
     border-radius: 16px;
     margin: 0 15px;
@@ -47,5 +53,28 @@
 
     p {
         margin-left: 80px;
+    }
+}
+
+@media all and (max-width: 800px) {
+    .inner-head-toy {
+        width: 700px;
+        flex-direction: column;
+    }
+
+    .toy-block {
+        width: 390px;
+        height: 130px;
+        margin: 30px 0;
+        p {
+            font-size: 25px;
+        }
+    }
+
+    .yellow-toy-block, .red-toy-block {
+        img {
+            width: 154px;
+            height: 156px;
+        }
     }
 }
