--- a/src/features/headBlockCard/headBlockCard.css
+++ b/src/features/headBlockCard/headBlockCard.css
@@ -56,3 +56,23 @@
         font-size: 10px;
     }
 }
+
+@media all and (max-width: 500px) {
+    .card-container {
+        width: 230px;
+        height: 208px;
+    }
+
+    .green-text {
+        font-size: 10px;
+    }
+
+    .big-text {
+        font-size: 16px;
+    }
+
+    .scroll-link {
+        width: 70px;
+        font-size: 7px;
+    }
+}
