--- a/src/widgets/toyCategories/toyCategories.css
+++ b/src/widgets/toyCategories/toyCategories.css
@@ -38,3 +38,14 @@ h4 {
         padding: 0;
     }
 }
+
+
+@media all and (max-width: 500px) {
+    h4 {
+        font-size: 20px;
+    }
+
+    .toys-row {
+        gap: 5px 5px;
+    }
+}
