--- a/src/widgets/headBlock/headBlock.css
+++ b/src/widgets/headBlock/headBlock.css
@@ -8,3 +8,82 @@
     justify-content: center;
     align-items: center;
 }
+
+.card-container {
+    width: 570px;
+    height: 308px;
+    border-radius: 16px;
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.green-text {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
+    color: #A5C926;
+    text-align: center;
+}
+
+.big-text {
+    font-family: "Varela Round", sans-serif;
+    font-weight: 400;
+    font-size: 39px;
+    line-height: 48px;
+    color: #111111;
+    text-align: center;
+}
+
+.scroll-link {
+    width: 153px;
+    height: 48px;
+    border-radius: 24px;
+    border: none;
+    background-color: #A5C926;
+    color: #FFFFFF;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: center;
+    cursor: pointer;
+}
+
+@media all and (max-width: 800px) {
+    .card-container {
+        width: 370px;
+    }
+
+    .big-text {
+        font-size: 20px;
+    }
+
+    .scroll-link {
+        width: 100px;
+        font-size: 10px;
+    }
+}
+
+@media all and (max-width: 500px) {
+    .card-container {
+        width: 230px;
+        height: 208px;
+    }
+
+    .green-text {
+        font-size: 10px;
+    }
+
+    .big-text {
+        font-size: 16px;
+    }
+
+    .scroll-link {
+        width: 70px;
+        font-size: 7px;
+    }
+}
